[package]
name = "rpki"
description = "RPKI: Parallel Tensor Watermarking and Pathogen Isolation Protocol [RFC-003]"
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://rpki.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-003-RPKI-IMMUNITY.md"
rust-version.workspace = true

# Keywords and categories for AI-native zero-trust authority
keywords = ["sovereign-ai", "zero-trust", "tensor-watermarking", "rfc-003", "pathogen-isolation", "128-bit-atomic"]
categories = ["cryptography", "network-programming", "security", "hardware-acceleration"]

[dependencies]
# --- Core Organism Linking (Unidirectional Dependency Flow) ---
# RPKI secures the Neural Spine (RTTP) by intercepting pulses in-band.
# Explicitly enable RTTP's 'std' feature for full protocol integration.
rttp = { workspace = true, features = ["std"] }

# --- Parallel Immune Pipeline (SIMD Execution) ---
# Designed for <10µs scan latency on hardware-accelerated units.
# [PERF] Utilizing Rayon for work-stealing parallel triage.
rayon             = { workspace = true } 
crossbeam         = { workspace = true } # Lock-free primitives for threat manifolds
crossbeam-channel = { workspace = true } # High-frequency pathogen reporting
parking_lot       = { workspace = true } # HFT-grade synchronization for audit state
once_cell         = { workspace = true } # Thread-safe initialization of the Merkle-DAG

# --- Cryptographic DNA (Zero-Trust Provenance) ---
# High-performance primitives for the Data Soul's integrity.
sha2    = { workspace = true }        # Merkle-DAG hashing for identity chains
ring    = { workspace = true }        # Hardware-accelerated cryptographic signatures
zeroize = { workspace = true, features = ["derive"] } # [SECURITY] Secure memory clearing

# --- Logic, Telemetry & Audit ---
serde   = { workspace = true, features = ["derive"] }
anyhow  = { workspace = true }
tracing = { workspace = true }        # Real-time pathogen isolation audit trails

[features]
# Standard implementation: Enables zero-trust defense for server and edge clusters.
default = ["std"]

# [Standard v1.0] Standard library support for general-purpose compute.
# 🛡️ FIX: Removed 'smallvec/std' as it does not exist in the source crate.
# Re-exports 'std' for internal Aicent Stack dependencies to prevent feature conflict.
std = [
    "serde/std", 
    "anyhow/std", 
    "rttp/std"
]

# [RFC-003] Enable AVX-512/SIMD acceleration for Tensor Watermarking.
# Enabling this activates hardware-specific intrinsics for bit-slice extraction.
simd-acceleration = []

# [RFC-006] Hive Shield Integration.
# Enables swarm-wide collective attestation of tensor pathogens.
hive-shield = []

[dev-dependencies]
# Performance benchmarking for 300µs pathogen isolation targets.
criterion = { workspace = true, features = ["async_tokio"] }
