[package]
name = "rpki"
description = "RPKI: Parallel Tensor Watermarking and Pathogen Isolation Protocol [RFC-003]"
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://rpki.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-003-RPKI-IMMUNITY.md"
rust-version.workspace = true

# Keywords and categories for AI-native zero-trust authority
keywords = ["sovereign-ai", "zero-trust", "tensor-watermarking", "rfc-003", "pathogen-isolation", "128-bit-atomic"]
categories = ["cryptography", "network-programming", "security", "hardware-acceleration"]

[dependencies]
# --- Core Organism Linking (Unidirectional Flow) ---
# RPKI secures the Neural Spine (RTTP) by intercepting and auditing pulses in-band.
# 🛡️ THE ARCHITECTURAL LOCK: RPKI depends on RTTP, but RTTP no longer depends on RPKI.
rttp = { workspace = true, features = ["std"] }

# --- Parallel Immune Pipeline (SIMD Execution) ---
# Designed for <10µs scan latency on hardware-accelerated units.
# [PERF] Utilizing Rayon for work-stealing parallel triage across 4 SIMD lanes.
rayon             = { workspace = true } 
crossbeam         = { workspace = true } # Lock-free primitives for the Threat Manifold
crossbeam-channel = { workspace = true } # High-frequency pathogen reporting
parking_lot       = { workspace = true } # HFT-grade synchronization for audit-state consistency
once_cell         = { workspace = true } # Safe static initialization of the Merkle-DAG cache

# --- Cryptographic DNA (Zero-Trust Provenance) ---
# High-performance primitives for protecting the "Data Soul."
sha2    = { workspace = true }        # Merkle-DAG hashing for ROA-Chain integrity
ring    = { workspace = true }        # Hardware-native signing and verification
zeroize = { workspace = true, features = ["derive"] } # [SECURITY] Secure memory clearing for AID seeds

# --- Logic, Telemetry & Audit ---
serde   = { workspace = true, features = ["derive"] }
anyhow  = { workspace = true }
tracing = { workspace = true }        # Real-time pathogen isolation audit trails

[features]
# Standard implementation: Enables zero-trust defense for planetary-scale clusters.
default = ["std"]

# [Standard v1.0] Standard library support for the immunity layer.
# Propagating 'std' to internal dependencies while maintaining no-std potential.
std = [
    "serde/std", 
    "anyhow/std", 
    "rttp/std"
]

# [RFC-003] SIMD acceleration for Tensor Watermarking (AVX-512 / Tensor Cores).
# Enabling this activates hardware-specific intrinsics for nanosecond bit-slice extraction.
simd-acceleration = []

# [RFC-006] Hive Shield Integration.
# Enables swarm-wide collective attestation of tensor pathogens via Aicent.net.
hive-shield = []

[dev-dependencies]
# Performance benchmarking for 300µs pathogen isolation targets.
criterion = { workspace = true, features = ["async_tokio"] }
